# niri-config

./: .gitignore  .stow-local-ignore  .stowrc  README.md  dot-zshrc  dot_zshrc  shellrc
dot-config/Code/User/: settings.json
dot-config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  monitors.conf  windows.conf
dot-config/kitty/: kitty.conf
dot-config/mango/: config.conf
dot-config/mango/config/: binds.conf  env.conf  execs.conf  io.conf  rules.conf  ui.conf
dot-config/niri/config/: binds.kdl  env.kdl  io.kdl  rules.kdl  spawns.kdl  ui.kdl
dot-config/nushell/: config.nu  nushell-sources.nu
dot-config/zed/: keymap.json
dot_config/hypr/: env.conf  exec.conf  hypridle.conf  hyprlock.conf  keybinds.conf
dot_config/kitty/: kitty.conf
dot_config/mango/: config.conf
dot_config/mango/config/: execs.conf
dot_config/niri/: config.kdl
dot_config/nushell/: aliases.nu  config.nu  env.nu  executable_nushell-sources.nu
dot_config/private_Code/User/: settings.json
dot_config/zed/: private_settings.json
home-manager/: dev.nix  flake.nix  packages.nix
hypr/dot-config/hypr/: exec.conf  hyprland.conf  keybinds.conf
misc/: hypridle.conf
py/: AGENT.md  Maskfile.md  proxmox-hosts.toml  proxmox_batch.py  proxmox_config_wizard.py  proxmox_inventory_builder.py  proxmox_maintenance.py  pyproject.toml  pyrightconfig.json  remote_maintenance.py
py/tests/: test_proxmox_batch.py  test_proxmox_config_wizard.py  test_proxmox_maintenance.py  test_remote_maintenance.py
scripts/: chezmoi-sync  docker-vm  lock  setup  shellrc
zsh/: dot-zshrc
(+15 files in other folders)
