[project]
name = "linux-config-scripts"
version = "0.1.0"
description = "Automation helpers for the linux-config repo"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "questionary>=2.0.1",
  "paramiko>=3.5.0",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.350",
  "pytest>=8.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]


[tool.ruff]
target-version = "py312"
line-length = 110
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC", "RUF"]
extend-select = ["B", "C4", "PIE", "SIM"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["proxmox_maintenance"]
